# cpydemo

./: .gitmodules  CMakeLists.txt
C/: CMakeLists.txt
C/include/: CPYDemo.h  TerrainGen.h  TerrainGen2DAnimation.h
C/src/: CPYDemo.cpp  TerrainGen.cpp  TerrainGen2DAnimation.cpp  main.cpp
python/: animated2DNoise.py  cpyxdemo_module.cpp  example.py
